ignoring env file

--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,14 @@ build/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
+.env
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
