--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-server.port=${PORT}
+server.port=${PORT:8080}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
