--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=${PORT:8080}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.api-docs.path=/api-docs
